--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
   crossorigin="anonymous"></script>
   
-  <script src="js/js2.js"></script>
+  <script src="js/js.js"></script>
 </head>
 <body>
 <textarea class="code" id="copyme" rows="500" cols="250"></textarea>
